created section navigation

--- a/index.html
+++ b/index.html
@@ -31,7 +31,27 @@
 	</div>
 	<!--//////////END OF JUMBOTRON/////////////-->
 
-	
+	<section id="content" class="container">
+		<div class="row">
+			<div class="col-sm-7 text-justify featured">
+			<h2 class="text-uppercase">Featured</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis dolore qui, natus, dolores, voluptatum repellendus quia assumenda dolorem repellat ducimus totam mollitia neque, molestias quis explicabo pariatur saepe. Maxime, rerum?</p>
+			</div>   <!--======END OF FEATURED SECTION==========-->
+			<div class="col-sm-3 col-sm-offset-2">
+				<h2 class="text-center text-uppercase">Services</h2>
+
+				<ul class="nav nav-pills nav-stacked text-center">
+					<li><a class="text-uppercase" href="">Home</a></li>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, nihil.</p>
+					<li><a class="text-uppercase" href="">Products</a></li>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, consectetur.</p>
+					<li><a class="text-uppercase" href="">Contact Us</a></li>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, in!</p>
+				</ul>
+
+			</div>
+		</div>  <!--END OF ROW -->
+	</section> <!--END OF CONTENT CONTAINER-->
 
 
 
