--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="row">
 				<div class="col-sm-4 product">
 					<div class="row">
-						<div class="col-xs-6 col-sm-12">
+						<div class="col-xs-6 col-sm-12 img-box">
 							<img src="img/product1.jpg" alt="" class="img-responsive">
 						</div>
 						<div class="col-xs-6 col-sm-12">
@@ -53,12 +53,12 @@
 				</div>
 				<div class="col-sm-4 product">
 					<div class="row">
-						<div class="col-xs-6 col-sm-12">
+						<div class="col-xs-6 col-sm-12 img-box">
 							<img src="img/product2.jpg" alt="" class="img-responsive">
 						</div>
 						<div class="col-xs-6 col-sm-12">
 							<h4>Cat Toy</h4>
-							<p>The best cat toy for your cat.</p>
+							<p>The best cat toy for your favorite cat.</p>
 							<a href="#" class="btn btn-info btn-xs">purchase now</a>
 						</div>
 					</div>
@@ -66,7 +66,7 @@
 
 				<div class="col-sm-4 product">
 					<div class="row">
-						<div class="col-xs-6 col-sm-12">
+						<div class="col-xs-6 col-sm-12 img-box">
 							<img src="img/product3.jpg" alt="" class="img-responsive">
 						</div>
 						<div class="col-xs-6 col-sm-12">
@@ -123,16 +123,18 @@
 					</address>
 					
 				</div><!--address section-->
-				<div class="col-xs-6 col-sm-4">
+				<div class="col-xs-12 col-sm-4 social">
 
 					<a href="#">
 						<i class="fa fa-facebook"></i>
 						<span>Facebook</span>
 					</a>
+					<br>
 					<a href="#">
 						<i class="fa fa-twitter"></i>
 						<span>Facebook</span>
 					</a>
+					<br>
 					<a href="#">
 						<i class="fa fa-linkedin"></i>
 						<span>Linkin</span>
