--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 	<section class="container">
 		<header class="row">
-			<div class="col-xs-8 col-sm-4 col-md-6">
+			<div class="col-xs-8 col-sm-4 col-md-6 center">
 				<img class="logo pull-left" src="img/petstore_logo.png" alt="Pet Store Logo">
 				<h1 class="pull-left text-center">Pet Store</h1>
 			</div>
 			<div class="col-xs-12 col-sm-7 col-md-6 bottom">
-				<ul class="nav nav-pills pull-right bottom">
+				<ul class="nav nav-pills pull-right bottom clearfix">
 					<li><a href="">Home</a></li>
 					<li><a href="">Products</a></li>
 					<li><a href="">Contact Us</a></li>
@@ -124,21 +124,21 @@
 					
 				</div><!--address section-->
 				<div class="col-xs-12 col-sm-4 social">
-
 					<a href="#">
 						<i class="fa fa-facebook"></i>
-						<span>Facebook</span>
-					</a>
-					<br>
-					<a href="#">
+						<span class="hidden-xs">Facebook</span>
+					</a>	
+					<br class="hidden-xs">
+					<a href="#">		
 						<i class="fa fa-twitter"></i>
-						<span>Facebook</span>
-					</a>
-					<br>
-					<a href="#">
+						<span class="hidden-xs">Facebook</span>
+					</a>	
+					<br class="hidden-xs">
+					<a href="#">							
 						<i class="fa fa-linkedin"></i>
-						<span>Linkin</span>
+						<span class="hidden-xs">Linkin</span>
 					</a>
+						
 				</div>
 
 				<div class="col-sm-12 fine-print text-center">
